--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://www.instagram.com/jonatas.martns/" target="_blank">📸 Instagram</a>
             </li>
             <li>
-                <a href="#">🎦 Facebook</a>
+                <a href="https://www.facebook.com/Jhow25" target="_blank">🎦 Facebook</a>
             </li>
         
         </ul>
